--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ main
 {
     background-color: hsl(244, 38%, 16%);
     height: auto;
-    width: 375px;
+    width: auto;
     position: relative;
     border-radius: 10px;
     display: flex;
@@ -125,7 +125,7 @@ main
 {
     position: absolute;
     background-color: hsl(277, 64%, 61%);
-    width: 375px;
+    width: auto;
     height: 375px;
     right: 0%;
     opacity: 0.5;
@@ -136,7 +136,7 @@ main
 {
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
-    width: 375px;
+    width: auto;
     right: 0%;
     position: absolute;
     height: 375px;
